<resources>
    <string name="app_name">Tour Bangla</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="adidmainactivity">ca-app-pub-9201945236996508/8538195271</string>
    <string name="browsebydivision">ca-app-pub-9201945236996508/9596126076</string>
    <string name="browsebytype">ca-app-pub-9201945236996508/4188720873</string>
    <string name="placedetails">ca-app-pub-9201945236996508/7142187274</string>
    <string name="hotels">ca-app-pub-9201945236996508/1095653677</string>
    <string name="touroperator">ca-app-pub-9201945236996508/2432786074</string>
    <string name="hoteldetails">ca-app-pub-9201945236996508/4827849276</string>
    <string name="touroperatordetails">ca-app-pub-9201945236996508/9258048872</string>
    <string name="tourblog">ca-app-pub-9201945236996508/4688248477</string>
    <string name="google_map_api_key">AIzaSyDPnbpcTfF90yrIQA0MBN2VVwRld-tMY7o</string>
    <string name="facebook_app_id">258793617834681</string>
    <string name="cd_background_image">background image</string>
    <string name="cd_main_image">main image</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_wishlist">My Wishlist</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_wishlist</item>
        <item>@string/title_visitedplaces</item>
        <item>@string/aboutapp</item>
        <item>@string/givefeedback</item>
        <item>@string/suggestplace</item>
        <item>@string/updatedatabase</item>
        <item>@string/rateus</item>
        <item>@string/update</item>

    </string-array>
    <string name="title_messages">My Wishlist</string>
    <string name="title_home">Home</string>
    <string name="title_wishlist">My Wishlist</string>
    <string name="title_visitedplaces">My Visited Places</string>
    <string name="title_activity_maps">Map</string>
    <string name="aboutapp">About App</string>
    <string name="givefeedback">Give Feedback</string>
    <string name="suggestplace">Suggest New Place</string>
    <string name="rateus">Rate Us</string>
    <string name="update">Update App</string>
    <string name="updatedatabase">Update Database</string>
    <string name="fontello_logo">&#xe802;</string>
    <string name="fontello_search">&#xe816;</string>
    <string name="fontello_x_mark">&#xe81f;</string>
    <string name="fontello_x_mark_masked">&#xe806;</string>
    <string name="fontello_microfon">&#xe80f;</string>
    <string name="fontello_user">&#xe81b;</string>
    <string name="fontello_password">&#xe823;</string>
    <string name="fontello_upload">&#xe81a;</string>
    <string name="fontello_play">&#xe813;</string>
    <string name="fontello_heart_empty">&#xe80b;</string>
    <string name="fontello_heart_full">&#xe80a;</string>
    <string name="fontello_drag_and_drop">&#xe821;</string>
    <string name="material_icon_account">&#xe800;</string>
    <string name="material_icon_account_multiple">&#xe8dc;</string>
    <string name="material_icon_bookmark">&#xe921;</string>
    <string name="material_icon_bike">&#xe915;</string>
    <string name="material_icon_box_full">&#xe86b;</string>
    <string name="material_icon_clock">&#xe881;</string>
    <string name="material_icon_check">&#xe867;</string>
    <string name="material_icon_checked_full">&#xe86f;</string>
    <string name="material_icon_check_empty">&#xe86a;</string>
    <string name="material_icon_check_full">&#xe86e;</string>
    <string name="material_icon_city">&#xe878;</string>
    <string name="material_icon_cart">&#xe857;</string>
    <string name="material_icon_chevron_down">&#xe874;</string>
    <string name="material_icon_chevron_up">&#xe877;</string>
    <string name="material_icon_date">&#xe848;</string>
    <string name="material_icon_drink">&#xea08;</string>
    <string name="material_icon_dollar">&#xe892;</string>
    <string name="material_icon_email">&#xe99c;</string>
    <string name="material_icon_eat">&#xeac6;</string>
    <string name="material_icon_friends">&#xe8d5;</string>
    <string name="material_icon_flag">&#xe96a;</string>
    <string name="material_icon_favorite">&#xe9b6;</string>
    <string name="material_icon_go">&#xea04;</string>
    <string name="material_icon_home_variant">&#xe9bd;</string>
    <string name="material_icon_home">&#xe9be;</string>
    <string name="material_icon_hotels">&#xeae3;</string>
    <string name="material_icon_heart_outline">&#xe9b3;</string>
    <string name="material_icon_headphones">&#xe9b1;</string>
    <string name="material_icon_human">&#xe9c5;</string>
    <string name="material_icon_headline">&#xeb40;</string>
    <string name="material_icon_image_box">&#xe952;</string>
    <string name="material_icon_like">&#xeb03;</string>
    <string name="material_icon_line_spacing">&#xe988;</string>
    <string name="material_icon_note">&#xea23;</string>
    <string name="material_icon_message">&#xea12;</string>
    <string name="material_icon_play">&#xe831;</string>
    <string name="material_icon_play_single">&#xea7d;</string>
    <string name="material_icon_play_square">&#xea7a;</string>
    <string name="material_icon_play_circle">&#xea7b;</string>
    <string name="material_icon_play_outline">&#xea7b;</string>
    <string name="material_icon_pig">&#xea72;</string>
    <string name="material_icon_password">&#xe9fa;</string>
    <string name="material_icon_plus_box">&#xea7f;</string>
    <string name="material_icon_party">&#xe937;</string>
    <string name="material_icon_star_outline">&#xeade;</string>
    <string name="material_icon_star">&#xeadf;</string>
    <string name="material_icon_share">&#xeac0;</string>
    <string name="material_icon_skip_next">&#xeaca;</string>
    <string name="material_icon_skip_previous">&#xeacb;</string>
    <string name="material_icon_soundcloud">&#xead3;</string>
    <string name="material_icon_statistics">&#xea87;</string>
    <string name="material_icon_shop">&#xe858;</string>
    <string name="material_icon_sleep">&#xe9c2;</string>
    <string name="material_icon_settings">&#xeabe;</string>
    <string name="material_icon_state">&#xeb62;</string>
    <string name="material_icon_to_left">&#xe876;</string>
    <string name="material_icon_video">&#xeb39;</string>
    <string name="material_icon_undo">&#xeb2c;</string>
    <string name="material_icon_unfold_more">&#xeb2f;</string>
    <string name="typography1">Typography I</string>
    <string name="typography2">Typography II</string>
    <string name="typography3">Typography III</string>
    <string name="material_design">Material design</string>
    <string name="material_design_variation">Material design variation</string>
    <string name="all_set_by_google_instructions_of_material_design">All set by Google instructions of Material Design</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_ipsum_short">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="thiner_and_lighter_version">Thiner and lighter version of Material design</string>
    <string name="thicker_and_darker_version">Thicker and darker version of Material design</string>
    <string name="number_of_images">%d image(s)</string>
    <string name="new_york">New York</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="welcome">Welcome!</string>
    <string name="undo_deletion">UNDO DELETION</string>
    <string name="undo_deletion_travel">WOOHOO! &#160;&#160;\nI\'VE MADE IT!</string>
    <string name="download">DOWNLOAD</string>
    <string name="done">DONE</string>
    <string name="error">ERROR</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="skip">SKIP</string>
    <string name="raised">RAISED</string>
    <string name="flat">FLAT</string>
    <string name="confirm_exit">Press Back button again to exit</string>
    <string name="iloveit">I love it</string>
    <string name="ilikeit">I like it</string>
    <string name="itsok">Its OK</string>
    <string name="dontlike">I dont like it</string>
    <string name="hateit">I hate it</string>
    <string name="addtowishlist">ADD TO WISHLIST</string>
    <string name="removefromwishlist">REMOVE FROM WISHLIST</string>
    <string-array name="dhaka_districts">
        <item>Dhaka</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Kishoreganj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Narayanganj</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Faridpur</item>
        <item>Tangail</item>
        <item>Narsingdi</item>
    </string-array>
    <string-array name="chittagong_districts">
        <item>Chittagong</item>
        <item>Bandarban</item>
        <item>Chadpur</item>
        <item>Brahmanbaria </item>
        <item>Comilla</item>
        <item>CoxsBazar </item>
        <item>Feni</item>
        <item>Khagrachari</item>
        <item>Laksmipur</item>
        <item>Noakhali</item>
        <item>Rangamati</item>
    </string-array>
    <string-array name="rajshahi_districts">
        <item>Joypurhat</item>
        <item>Bogra</item>
        <item>Naogaon</item>
        <item>Natore</item>
        <item>Nawabganj</item>
        <item>Pabna</item>
        <item>Sirajganj</item>
        <item>Rajshahi</item>
    </string-array>
    <string-array name="rangpur_districts">
        <item>Dinajpur</item>
        <item>Gaibandha</item>
        <item>Kurigram</item>
        <item>Lalmonirhat</item>
        <item>Nilphamari</item>
        <item>Panchagarh</item>
        <item>Rangpur</item>
        <item>Thakurgaon</item>
    </string-array>
    <string-array name="mymensingh_districts">
        <item>Netrokona</item>
        <item>Sherpur</item>
        <item>Jamalpur</item>
        <item>Mymensingh</item>
    </string-array>
    <string-array name="barisal_districts">
        <item>Barguna</item>
        <item>Barisal</item>
        <item>Vola</item>
        <item>Jhalokati</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
    </string-array>
    <string-array name="khulna_districts">
        <item>Bagerhat</item>
        <item>Chuadanga</item>
        <item>Jessore</item>
        <item>Jhenaida</item>
        <item>Khulna</item>
        <item>Kushtia</item>
        <item>Magura</item>
        <item>Meherpur</item>
        <item>Satkhira</item>
        <item>Narail</item>
    </string-array>
    <string-array name="sylhet_districts">
        <item>Habiganj</item>
        <item>Moulvibazar</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
    </string-array>
    <string-array name="dhaka_districts_bangla">
        <item>ঢাকা</item>
        <item>গাজীপুর</item>
        <item>গোপালগঞ্জ</item>
        <item>কিশোরগঞ্জ</item>
        <item>মাদারীপুর</item>
        <item>মানিকগঞ্জ</item>
        <item>মুন্সীগঞ্জ</item>
        <item>নারায়াণগঞ্জ</item>
        <item>রাজবাড়ী</item>
        <item>শরীয়তপুর</item>
        <item>ফরিদপুর</item>
        <item>টাঙ্গাইল</item>
        <item>নরসিংদী</item>
    </string-array>
</resources>